<resources>
    <string name="app_name">chips</string>
    <string name="welcome">Welcome</string>
    <string name="monday">Monday, </string>
    <string name="_12_30_pm">12:30 PM,</string>
    <string name="weather">Weather</string>
    <string name="meal_order">Meal Order</string>
    <string name="room_service">Room Service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meat">Meat</string>
    <string name="chicken">Chicken</string>
    <string name="soup">Soup</string>
    <string name="salad">Salad</string>
    <string name="send">Send</string>
    <string name="options">Options</string>
    <string name="hamburger">Hamburger</string>
    <string name="sandwich">Sandwich</string>
    <string name="dessert">Dessert</string>
    <string name="fruit">Fruit</string>
    <string name="fries">Fries</string>
    <string name="turn_on_lights">Turn on Lights</string>
    <string name="turn_off_lights">Turn off Lights</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="lock_the_door">Lock Door</string>
    <string name="unlock">Unlock Door</string>
    <string name="make_a_call">Make a Call</string>
    <string name="send_message">Send Text</string>
    <string name="set_air_conditioning">Set Air Conditioning</string>
    <string name="hot">Hot</string>
    <string name="warm">Warm</string>
    <string name="cold">Cold</string>
    <string name="freezing">Freezing</string>
    <string name="cool">Cool</string>
    <string name="open_the_curtain">Open Curtain</string>
    <string name="close_curtain">Close Curtain</string>
    <string name="to">To: </string>
    <string name="re">Re: </string>
    <string name="joe_doe">Joe Doe</string>
    <string name="message">Message</string>
    <string name="new_message">New Message</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="action_chip">Action Chip</string>
    <string name="choice_chip">Choice Chip</string>

    <string-array name="person">
        <item>Joe Doe</item>
        <item>Jane Doe</item>
    </string-array>
</resources>
