<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:cropToPadding="true"
            android:src="@drawable/beach_house" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="?android:textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:paddingStart="24dp"
                android:text="@string/monday"
                android:textColor="?android:textColorSecondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/_12_30_pm"
                android:textColor="?android:textColorSecondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/weather"
                android:textColor="?android:textColorSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="#c0c0c0" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.button.MaterialButton
                android:id="@+id/orderModalSheet"
                style="@style/materialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/meal_order"
                app:icon="@drawable/ic_local_dining_black_24dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/roomService"
                style="@style/materialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/room_service"
                app:icon="@drawable/ic_room_service_black_24dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/message"
                style="@style/materialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/send_message"
                app:icon="@drawable/ic_message_black_24dp" />

        </LinearLayout>
        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/set_air_conditioning"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp">

            <android.support.design.chip.ChipGroup
                android:id="@+id/chipAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:chipSpacing="18dp"
                app:checkedChip="@id/warm"
                app:singleLine="true"
                app:singleSelection="true">

                <android.support.design.chip.Chip
                    style="@style/choiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot" />

                <android.support.design.chip.Chip
                    style="@style/choiceChip"
                    android:id="@+id/warm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warm" />

                <android.support.design.chip.Chip
                    style="@style/choiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cool" />

                <android.support.design.chip.Chip
                    style="@style/choiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cold" />

                <android.support.design.chip.Chip
                    style="@style/choiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freezing" />

            </android.support.design.chip.ChipGroup>
        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="#c0c0c0" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:scrollbars="none">

        <android.support.design.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacing="8dp">

            <android.support.design.chip.Chip
                android:id="@+id/light"
                style="@style/actionChip"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_lights"
                app:chipIcon="@drawable/ic_brightness_5_black_24dp" />

            <android.support.design.chip.Chip
                android:id="@+id/alarm"
                style="@style/actionChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_alarm"
                app:chipIcon="@drawable/ic_access_alarm_black_24dp" />

            <android.support.design.chip.Chip
                android:id="@+id/door"
                style="@style/actionChip"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="@string/lock_the_door"
                app:chipIcon="@drawable/ic_lock_outline_black_24dp" />

            <android.support.design.chip.Chip
                android:id="@+id/curtain"
                style="@style/actionChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_the_curtain"
                app:chipIcon="@drawable/curtain"
                android:layout_marginEnd="4dp"/>

        </android.support.design.chip.ChipGroup>

        </HorizontalScrollView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>