<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SendText">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_message"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:padding="24dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/to" />

        <android.support.design.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipGroup"
            android:layout_margin="8dp"
            app:singleLine="true">

        </android.support.design.chip.ChipGroup>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:id="@+id/editText"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_margin="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            android:hint="@string/message"
            app:boxStrokeColor="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/materialSendButton"
        style="@style/materialButton"
        android:text="@string/send"
        android:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_send_black_24dp"
        android:layout_gravity="end"
        android:layout_margin="24dp"/>

</LinearLayout>